--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -14,6 +14,13 @@
     <h2>Attributes</h2>
     <ul>
       <li>
+        icon - static (init-only, optional). Default: arrow-down-small.
+      </li>
+      <li>
+        size - static (optional). Default: default.<br>
+        Specifies the component's size (extendable via CSS).
+      </li>
+      <li>
         color - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
@@ -42,12 +49,9 @@
           <div>&lt;ui-accordion id="id1"&gt;&lt;/ui-accordion&gt;</div>
           <br>
           <div>element.items = [</div>
-          <div>{</div>
-          <div>title: 'What is Lorem?',</div>
-          <div>content: 'Lorem ipsum dolor sit amet...'},</div>
-          <div>{</div>
-          <div>title: 'Why use it?',</div>
-          <div>content: 'Lorem ipsum dolor sit amet...'}</div>
+          <div>{header:'What is Lorem?',body:'Lorem ipsum dolor sit amet...'},</div>
+          <div>{header:'Why use it?',body:'Lorem ipsum dolor sit amet...'},</div>
+          <div>{header:'Where to use?',body:'Lorem ipsum dolor sit amet...'}</div>
           <div>];</div>
         </code>
       </div>
@@ -60,6 +64,6 @@
 document.getElementById('id1').items = [
   {header:'What is Lorem?',body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'},
   {header:'Why use it?',body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'},
-  {header:'Why use it?',body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'}
+  {header:'Where to use?',body:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'}
 ];
 </script>
