--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -1,6 +1,6 @@
 <section class="intro">
-  <h1>Accordion</h1>
-  <div class="description">Accordion toggles collapsible horizontal content sections.</div>
+  <h1>Tabs</h1>
+  <div class="description">Toggles between multiple content panels within a tab interface.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Usage</h2>
