--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -3,14 +3,6 @@
   <div class="description">Accordion toggles collapsible horizontal content sections.</div>
   <ui-divider></ui-divider>
   <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>
-        The component functions as both a button and a wrapper.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
     <h2>Features</h2>
     <ul>
       <li>
@@ -57,24 +49,19 @@
           <div>&lt;ui-accordion id="id1"&gt;&lt;/ui-accordion&gt;</div>
 <br>
 <div>document.getElementById('id1').items = [</div>
-<div>{
-    header:'What is Lorem?',
-    panel:'Lorem ipsum dolor sit amet...',
-    expanded:true
-  },
-</div>
-<div>
-  {
-    header:'Why use it?',
-    panel:'Lorem ipsum dolor sit amet...'
-  },
-</div>
-<div>
-  {
-    header:'Where to use?',
-    panel:'Lorem ipsum dolor sit amet...'
-  }
-</div>
+<div>{</div>
+&nbsp;header:'What is Lorem?',<br>
+&nbsp;panel:'Lorem ipsum dolor sit amet...',<br>
+&nbsp;expanded:true
+<div>},{</div>
+&nbsp;header:'Why use it?',<br>
+&nbsp;panel:'Lorem ipsum dolor sit amet...',<br>
+&nbsp;disabled:true
+<div>},{</div>
+<div></div>
+&nbsp;header:'Where to use?',<br>
+&nbsp;panel:'Lorem ipsum dolor sit amet...'
+<div>}</div>
 <div>];</div>
 
         </code>
@@ -94,6 +81,7 @@ document.getElementById('id1').items = [
   {
     header:'Why use it?',
     panel:'Lorem ipsum dolor sit amet...',
+    disabled:true
   },
   {
     header:'Where to use?',
