--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Tabs</h1>
-  <div class="description">Toggles between multiple content panels within a tab interface.</div>
+  <div class="description">Tabs organize content into separate panels that users can switch between.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Usage</h2>
