--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Accordion</h1>
-  <div class="description">Accordion toggles collapsible horizontal content sections.</div>
+  <div class="description">Accordion toggles collapsible content sections.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -18,7 +18,7 @@
       </li>
       <li>
         size - static (optional). Default: default.<br>
-        Specifies the component's size (extendable via CSS).
+        Specifies the component's sizes (extendable via CSS).
       </li>
       <li>
         color - static (optional). Default: default.<br>
@@ -51,7 +51,7 @@
 <div>document.getElementById('id1').items = [</div>
 <div>{</div>
 &nbsp;header:'What is Lorem?',<br>
-&nbsp;panel:'Lorem ipsum dolor sit amet...',<br>
+&nbsp;panel:'Lorem &lt;strong&gt;ipsum&lt;/strong&gt; dolor sit amet...',<br>
 &nbsp;expanded:true
 <div>},{</div>
 &nbsp;header:'Why use it?',<br>
@@ -75,7 +75,7 @@
 document.getElementById('id1').items = [
   {
     header:'What is Lorem?',
-    panel:'Lorem ipsum dolor sit amet...',
+    panel:'Lorem <strong>ipsum</strong> dolor sit amet...',
     expanded:true
   },
   {
