--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -38,9 +38,9 @@
           <div>&lt;ui-tabs id="id1"&gt;&lt;/ui-tabs&gt;</div>
           <br>
           <div>element.items = [</div>
-          <div>{header:'What is Lorem?',body:'Lorem ipsum dolor sit amet...'},</div>
-          <div>{header:'Why use it?',body:'Lorem ipsum dolor sit amet...'},</div>
-          <div>{header:'Where to use?',body:'Lorem ipsum dolor sit amet...'}</div>
+          <div>{header:'What is Lorem?',panel:'Lorem ipsum dolor sit amet...'},</div>
+          <div>{header:'Why use it?',panel:'Lorem ipsum dolor sit amet...'},</div>
+          <div>{header:'Where to use?',panel:'Lorem ipsum dolor sit amet...'}</div>
           <div>];</div>
         </code>
       </div>
