--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -73,7 +73,7 @@
 </section>
 
 <script>
-const items = [
+items = [
   {
     header:'What is Lorem?',
     panel:'Lorem <strong>ipsum</strong> dolor sit amet...',
