--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -60,11 +60,19 @@
         <code>
           <div>&lt;ui-tabs shape="square"&gt;&lt;/ui-tabs&gt;</div>
           <br>
-          <div>element.items = [</div>
-          <div>{header:'What is Lorem?',panel:'Lorem ipsum dolor sit amet...'},</div>
-          <div>{header:'Why use it?',panel:'Lorem ipsum dolor sit amet...'},</div>
-          <div>{header:'Where to use?',panel:'Lorem ipsum dolor sit amet...'}</div>
-          <div>];</div>
+          element.items = [{<br>
+          &nbsp;header:'What is Lorem?',<br>
+          &nbsp;panel:'Lorem ipsum dolor sit amet...'<br>
+          },{<br>
+          &nbsp;header:'Why use it?',<br>
+          &nbsp;panel:'Lorem ipsum dolor sit amet...'<br>
+          },{<br>
+          &nbsp;header:'Where to use?',<br>
+          &nbsp;panel:'Lorem ipsum dolor sit amet...'<br>
+          },{<br>
+          &nbsp;header:'Lorem Lorem',<br>
+          &nbsp;panel:'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'<br>
+          }];
         </code>
       </div>
     </div>
