--- a/ui/ui-select/ui-select.html
+++ b/ui/ui-select/ui-select.html
@@ -30,6 +30,19 @@
       <li>
         icon - static (init-only, optional). Default: arrow-down-small.
       </li>
+      <li>
+        size - static (optional). Default: default.<br>
+        Specifies the component's sizes (extendable via CSS).
+      </li>
+      <li>
+        color - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
+      </li>
+      <li>
+        shape - static (optional). Default: rounded.<br>
+        Available options: rounded, pill, square.<br>
+        Sets the corner style.
+      </li>
     </ul>
   </div>
 </section>
@@ -41,6 +54,25 @@
     <div class="example">
       <div class="preview">
         <ui-select id="id1"></ui-select>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-select&gt;&lt;/ui-select&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Shape</div>
+    <div class="example">
+      <div class="preview">
+        <ui-select shape="rounded" id="id1"></ui-select>
+        <ui-select shape="square" id="id1"></ui-select>
+        <ui-select shape="pill" id="id1"></ui-select>
       </div>
       <div class="toolbar">
         <span>HTML</span>
