--- a/pages/ui-foundation.html
+++ b/pages/ui-foundation.html
@@ -22,9 +22,6 @@
       <li>
         All components are easily customizable via CSS.
       </li>
-      <li>
-        Styles can be overridden using standard selectors, CSS variables, or utility classes.
-      </li>
     </ul>
   </div>
   <div class="info">
@@ -32,6 +29,14 @@
     <ul>
       <li>
         ARIA attributes reflect the correct roles and component states.
+      </li>
+    </ul>
+  </div>
+  <div class="info">
+    <h2>Accessibility</h2>
+    <ul>
+      <li>
+        Interactive elements support keyboard navigation: Tab to move forward, Shift + Tab to move backward, Enter or Space to trigger actions, and arrow keys where contextually relevant (e.g., in tabs, menus, sliders).
       </li>
     </ul>
   </div>
