--- a/ui/ui-tabs/ui-tabs.html
+++ b/ui/ui-tabs/ui-tabs.html
@@ -25,7 +25,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Shape rounded with disabled tab</div>
+    <div>Rounded shape with a disabled tab</div>
     <div class="example">
       <div class="preview">
         <ui-tabs></ui-tabs>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="content-item">
-    <div>Shape square with disabled tab</div>
+    <div>Square shape with a disabled tab</div>
     <div class="example">
       <div class="preview">
         <ui-tabs shape="square"></ui-tabs>
