--- a/ui/ui-alert/ui-alert.html
+++ b/ui/ui-alert/ui-alert.html
@@ -17,6 +17,10 @@
         Available options: start, center, end, justify.<br>
         Controls text alignment.
       </li>
+      <li>
+        theme - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
+      </li>
     </ul>
   </div>
 </section>
