--- a/ui/ui-listbox/ui-listbox.html
+++ b/ui/ui-listbox/ui-listbox.html
@@ -10,7 +10,10 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>.</li>
+      <li>
+        theme - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
+      </li>
     </ul>
   </div>
 </section>
