--- a/ui/ui-select/ui-select.html
+++ b/ui/ui-select/ui-select.html
@@ -20,7 +20,7 @@
         Specifies the component's sizes (extendable via CSS).
       </li>
       <li>
-        color - static (optional). Default: default.<br>
+        theme - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
       <li>
