--- a/ui/ui-accordion/ui-accordion.html
+++ b/ui/ui-accordion/ui-accordion.html
@@ -12,7 +12,7 @@
         Specifies the component's sizes (extendable via CSS).
       </li>
       <li>
-        color - static (optional). Default: default.<br>
+        theme - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
       <li>
