--- a/ui/ui-breadcrumb/ui-breadcrumb.html
+++ b/ui/ui-breadcrumb/ui-breadcrumb.html
@@ -1,6 +1,15 @@
 <section class="intro">
   <h1>Breadcrumb</h1>
   <div class="description">Breadcrumbs show the current page's location within a navigational hierarchy and allow users to navigate to parent pages.</div>
+  <div class="info">
+    <h2>Attributes</h2>
+    <ul>
+      <li>
+        theme - static (optional). Default: default.<br>
+        Specifies the component's color scheme (extendable via CSS).
+      </li>
+    </ul>
+  </div>
 </section>
 
 <section class="content">
