--- a/ui/ui-separator/ui-separator.html
+++ b/ui/ui-separator/ui-separator.html
@@ -32,7 +32,7 @@
         Defines the separator direction.
       </li>
       <li>
-        color - static (optional). Default: default.<br>
+        theme - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
     </ul>
