--- a/ui/ui-textarea/ui-textarea.html
+++ b/ui/ui-textarea/ui-textarea.html
@@ -35,7 +35,7 @@
         Specifies the component's size (extendable via CSS).
       </li>
       <li>
-        color - static (optional). Default: default.<br>
+        theme - static (optional). Default: default.<br>
         Specifies the component's color scheme (extendable via CSS).
       </li>
       <li>
